@@ -128,9 +128,15 @@ var Browser = function(params) {
                 thisB.initPlugins().then( function() {
                     thisB.initTrackMetadata();
                     thisB.loadRefSeqs().then( function() {
+
+                       // figure out our initial location
+                       var initialLocString = thisB._initialLocation();
+                       var initialLoc = Util.parseLocString( initialLocString );
+                       this.refSeq = initialLoc.ref || this.refSeq;
+
                        thisB.initView().then( function() {
                            Touch.loadTouch(); // init touch device support
-                           thisB.navigateTo( thisB._initialLocation() );
+                           thisB.navigateTo( initialLocString );
                            thisB.passMilestone( 'completely initialized', { success: true } );
                        });
                        thisB.reportUsageStats();
@@ -1322,12 +1328,8 @@ Browser.prototype._coerceBoolean = function(val) {
  */
 Browser.prototype.addRefseqs = function( refSeqs ) {
     var allrefs = this.allRefs = this.allRefs || {};
-    var refCookie = this.cookie('refseq');
     dojo.forEach( refSeqs, function(r) {
         this.allRefs[r.name] = r;
-        if( ! this.refSeq && refCookie && r.name.toLowerCase() == refCookie.toLowerCase() ) {
-            this.refSeq = r;
-        }
     },this);
 
     // generate refSeqOrder
@@ -1960,7 +1962,6 @@ Browser.prototype._updateLocationCookies = function( location ) {
     oldLocMap[this.refSeq.name] = { l: locString, t: Math.round( (new Date()).getTime() / 1000 ) - 1340211510 };
     oldLocMap = this._limitLocMap( oldLocMap, this.config.maxSavedLocations || 10 );
     this.cookie( 'location', dojo.toJson(oldLocMap), {expires: 60});
-    this.cookie( 'refseq', this.refSeq.name );
 };
 
 /**
